<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Activity_Main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/mainSwipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/main_addrEt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:layout_marginEnd="10dp"
                            android:paddingHorizontal="10dp"
                            android:singleLine="true"
                            android:hint="@string/addrEt" />
                        <Button
                            android:id="@+id/main_searchBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:text="@string/search"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_infoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/main_nowTimeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="10dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/main_localTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="#000000"
                        android:textSize="22sp" />

                    <LinearLayout
                        android:id="@+id/main_tempLinearLayout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:text="@string/nowTemperature"
                            android:textSize="16sp"
                            android:textColor="#000000"/>
                        <TextView
                            android:id="@+id/main_nowTemTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:textSize="16sp"
                            android:textColor="#000000"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/Temperature"
                            android:textSize="16sp"
                            android:textColor="#000000"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:text="@string/humidity"
                            android:textSize="16sp"
                            android:textColor="#000000"/>
                        <TextView
                            android:id="@+id/main_humidityTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:textSize="16sp"
                            android:textColor="#000000"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/percent"
                            android:textSize="16sp"
                            android:textColor="#000000"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/main_windLinearLayout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:text="@string/nowWind"
                            android:textSize="16sp"
                            android:textColor="#000000"/>
                        <TextView
                            android:id="@+id/main_windTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:textSize="16sp"
                            android:textColor="#000000"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speed"
                            android:textSize="16sp"
                            android:textColor="#000000"/>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/main_weatherImg"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/main_timeWeatherTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:layout_marginStart="15dp"
                        android:text="@string/weatherByTime"
                        android:textSize="16sp"
                        android:textColor="#000000" />

                    <View
                        android:id="@+id/main_view01"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:background="#857878"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/main_timeWeatherRv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"/>

                    <View
                        android:id="@+id/main_view02"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="80dp"
                        android:background="#857878"/>

                    <TextView
                        android:id="@+id/main_dayWeatherTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/weatherByDate"
                        android:textSize="16sp"
                        android:textColor="#000000" />

                    <View
                        android:id="@+id/main_view03"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:background="#857878"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/main_dayWeatherRv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"/>

                    <View
                        android:id="@+id/main_view04"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        android:background="#857878"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>